# FIZZ

./: .clangd  CMakeLists.txt  LICENSE  README.md  STM32L476RGTX_FLASH.ld  build.py  compile_commands.json  extra_verbose.py  linker_STM32L476RGTX.ld  nosys.specs  platformio.ini  startup_STM32L476RGTX.s
cmake/: gnu-arm.cmake
src/: main.c  main.cpp  types.h
src/CMSISHeaders/: cmsis_compiler.h  cmsis_gcc.h  core_cm4.h  stm32l476xx.h
src/Functions/Delay/: delay.c  delay.h
src/Functions/InitializeTimerForServos/: initializeTimerForServos.cpp  initializeTimerForServos.hpp
src/Functions/ReadPin/: readPin.c  readPin.h
src/Functions/SetPin/: setPin.c  setPin.h
src/Functions/SetServoAngle/: setServoAngle.c  setServoAngle.h
src/Functions/SysTickInit/: SysTickInit.c  SysTickInit.h
src/Heap/: Global.h  Heap.c  Heap.h
src/Heap/Functions/BumpPointerMalloc/: bumpPointerMalloc.c  bumpPointerMalloc.h
src/Heap/Functions/Free/: free.c  free.h
src/Heap/Functions/Malloc/: malloc.c  malloc.h
src/Heap/Structures/Block/: Block.h
